-Converted the EmploymentStatus.java to StateOfResidency.java
-Converted the EmploymentStatus variable to state variable.

-After values are inputted, the values are saved to a list called listOfPeople.

-Added a try-catch statement around Scanner inputs

-The string variable for state is compared to StateOfResidency.CALIFORNIA with the toString() method.

-Changed the enum values in the StateOfResidency enum file.

-Added if-else-if statements.

-If "addNewPerson" variable is not "no" or "yes", a default choice of "no" is used because the first list of data was added.